
[package]
name = "cdtsim"
version = "0.1.0"
authors = ["Elias Rohrer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4"
simple-logging = "2.0.2"
maxminddb = "0.13.0"
rand = { version = "0.7.3", features = ["small_rng"] }
rand_distr = "0.2.2"
csv = "1.1"
serde = "1.0.110"
regex = "1"
itertools = "0.9.0"
statrs = "0.12.0"
clap = "2.33.1"

lngraphparser = { git = "https://github.com/tnull/lngraphparser" }
